# ml_hex

./: .gitignore  Cargo.toml
crates/hex_agents/: Cargo.toml
crates/hex_agents/src/: alpha_zero.rs  heuristic.rs  lib.rs  mcts.rs  model.rs  ppo.rs  random.rs
crates/hex_core/: Cargo.toml
crates/hex_core/src/: board.rs  cell.rs  dsu.rs  error.rs  lib.rs  state.rs
crates/hex_train/: Cargo.toml
crates/hex_train/src/: alpha_zero_train.rs  backend.rs  config.rs  lib.rs  ppo_train.rs  replay_buffer.rs  self_play.rs
crates/hex_tui/: Cargo.toml
crates/hex_tui/src/: app.rs  board_widget.rs  config.rs  error.rs  input.rs  lib.rs  runner.rs
src/: main.rs
